fix: Changed overflow-x hidden on body to clip to prevent conflicts with sticky and work at same time

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -27,7 +27,7 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow-x: clip;
   display: flex;
   justify-content: center;
 }
